--- a/index.html
+++ b/index.html
@@ -2,7 +2,27 @@
 <html>
 <head>
     <title>Color Grid Game</title>
-    <link rel="stylesheet" href="styles.css">
+<style>
+    body {
+    margin: 0;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #f0f0f0;
+    overflow: hidden;
+}
+
+.canvas-container {
+    position: relative;
+    display: inline-block;
+}
+
+#gameCanvas {
+    display: block;
+    background: #222;
+}
+</style>  
     <link rel="stylesheet" href="ui.css">
 </head>
 <body>
