--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <canvas id="gameCanvas" width="640" height="480"></canvas>
         <div id="ui-container"></div>
     </div>
-    <script src="ui.js"></script>
-    <script src="game.js"></script>
+    <script src="ui.js" type="module"></script>
+    <script src="game.js" type="module"></script>
 </body>
 </html>
