--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
     <div class="canvas-container">
         <canvas id="gameCanvas" width="640" height="480"></canvas>
-        <div id="ui-container"></div>
+        <div id="uiContainer"></div>
     </div>
     <script src="ui.js" type="module"></script>
     <script src="game.js" type="module"></script>
