--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
     <div class="canvas-container">
-        <canvas id="gameCanvas" width="640" height="480"></canvas>
+        <canvas id="gameCanvas" width="640" height="480"  tabindex="1"></canvas>
         <div id="uiContainer"></div>
     </div>
     <script src="ui.js" type="module"></script>
