--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
     </div>
     <script src="ui.js" type="module"></script>
     <script src="game.js" type="module"></script>
+        <script src="screen.js" type="module"></script>
 </body>
 </html>
