--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>Color Grid Game</title>
+            <meta charset='UTF-8'><meta name='viewport' content='initial-scale=1,width=device-width,height=device-height,viewport-fit=cover,maximum-scale=1,user-scalable=no'>
+
 <style>
     body {
     margin: 0;
